--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         padding: 0;
         margin: 0;
         background: #e9e9e9;
+        body {
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+        }
       }
       #title {
         color: black;
